# django-snacks

./: README.md  db.sqlite3  pyproject.toml
snacks/: urls.py  views.py
snacks_project/: settings.py
templates/: about.html  base.html  home.html
